--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,33 @@
 body {
     font-family: arial;
-    background-color: teal;
+    background-color: brown;
     color: white;
     text-align: center;
 }
 
-.btn img {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    vertical-align: middle;
-    margin-right: 0.2em;
-}
-
-.form-group {
-    margin-bottom: 10px;
-}
-
 .btn {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: grey;
     color: #fff;
     border: none;
     cursor: pointer;
+    margin-top: 5px;
 }
 
-.message {
-    margin-top: 10px;
-    font-weight: bold;
+.form-group {
+  padding: 10px;
 }
 
 .team-members {
-    margin-top: 20px;
+    margin-top: 5px;
     font-weight: bold;
 }
 
 .card {
     width: 100%;
     height: auto;
-}
-
-.card-water {
-    background: linear-gradient(to right, #4A90E2 50%, gray 50%);
-}
-
-.card-normal {
-    background: linear-gradient(to right, #A8A878 50%, gray 50%);
-}
-
-.card-fighting {
-    background: linear-gradient(to right, #C03028 50%, gray 50%);
-}
-
-.card-flying {
-    background: linear-gradient(to right, #A890F0 50%, gray 50%);
-}
-
-.card-poison {
-    background: linear-gradient(to right, #A040A0 50%, gray 50%);
-}
-
-.card-ground {
-    background: linear-gradient(to right, #E0C068 50%, gray 50%);
-}
-
-.card-rock {
-    background: linear-gradient(to right, #B8A038 50%, gray 50%);
-}
-
-.card-water,
-.card-normal,
-.card-fighting,
-.card-flying,
-.card-poison,
-.card-ground,
-.card-rock {
-    background: linear-gradient(to right, #4A90E2 50%, gray 50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    background-color: grey;
+    color: orange;
 }
 
 .card-img-top {
@@ -109,7 +56,7 @@ body {
 }
 
 .card-grid {
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 #teamList {
@@ -119,53 +66,10 @@ body {
   flex-wrap: wrap;
 }
 
-.modal-message {
-  color: #007bff;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  max-width: 80%;
-  text-align: center;
-}
-
-.modal-buttons {
-  text-align: center;
-}
-
-.modal-buttons button {
-  margin: 10px;
-}
-
-.pokeball-image {
-  width: 100px; /* Adjust the width as per your requirements */
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-/* Custom styles for small devices (e.g., smartphones) */
 @media screen and (max-width: 576px) {
   .btn {
-    font-size: 14px; /* Reduce the font size */
-    padding: 5px 10px; /* Adjust the padding */
+    font-size: 14px; 
+    padding: 5px 10px; 
   }
 }
 
